stry to fix shadow on mobile

--- a/src/assets/scss/portfolio.scss
+++ b/src/assets/scss/portfolio.scss
@@ -6,7 +6,7 @@
 }
 
 .zoom-effect {
-  transition: 0.3s;
+  transition: 0.2s;
   &:hover {
     z-index: 4;
     transform: scale(1.2);
