--- a/src/assets/scss/skills.scss
+++ b/src/assets/scss/skills.scss
@@ -57,7 +57,7 @@ $porcent-angular: 80;
   stroke-width: 10;
   stroke-dasharray: 440;
   stroke-dashoffset: 440;
-  stroke: #f5f4f4;
+  stroke: #000000;
   stroke-linecap: round;
   transform: translate(5px, 5px); // stroke-width / 2
 }
