--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -20,3 +20,17 @@
 .style-none {
   text-decoration: none;
 }
+
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #050505;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 100px;
+  background-image: linear-gradient(0deg, #ff5858 0%, #f09819 100%);
+  box-shadow: inset 2px 2px 5px 0 rgba(rgb(0, 0, 0), 0.5);
+}
